--- a/speed/src/app/app.component.html
+++ b/speed/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>Angular Speed: aplicaciones de alto rendimiento</h1>
-<h2>PATRON REDUX</h2>
+<h2>  ngrx  </h2>
 <app-contenedor-container></app-contenedor-container>
 <router-outlet></router-outlet>
 
