--- a/speed/src/app/buscador-presenter/buscador-presenter.component.html
+++ b/speed/src/app/buscador-presenter/buscador-presenter.component.html
@@ -1,4 +1,5 @@
 <section id="selector">
+  <label>Filtrar por: </label>
   <select #filtro
   (change)="cambiaFiltro(filtro.value)"
     name="filtro">
