--- a/speed/src/app/contenedor-container/contenedor-container.component.html
+++ b/speed/src/app/contenedor-container/contenedor-container.component.html
@@ -5,7 +5,7 @@
 </div>
 <div>
   <h3>LISTA LANZAMIENTOS</h3>
-  <app-listado-presenter [lanzamientos]="lanzamientos | async"
+  <app-listado-presenter [lanzamientos]="lanzamientos"
                           [contador]="contador"></app-listado-presenter>
 </div>
 
