--- a/speed/src/app/contenedor-container/contenedor-container.component.html
+++ b/speed/src/app/contenedor-container/contenedor-container.component.html
@@ -1,3 +1,4 @@
+{{ lanzamientos | json }}
 <div>
   <h3>Buscador de lanzamientos</h3>
   <app-buscador-presenter (search)="onSearch($event)"
@@ -6,7 +7,8 @@
 <div>
   <h3>LISTA LANZAMIENTOS</h3>
   <app-listado-presenter [lanzamientos]="lanzamientos"
-                          [contador]="contador"></app-listado-presenter>
+                          [contador]="contador"
+                          (graba)="onGraba()"></app-listado-presenter>
 </div>
 
 
